src/plugins/data/common/opensearch_query/kuery/ast/_generated_/kuery.js
/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Any modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart, Literal: peg$parseLiteral },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(query, trailing) {
            if (trailing.type === 'cursor') {
              return {
                ...trailing,
                suggestionTypes: ['conjunction']
              };
            }
            if (query !== null) return query;
            return nodeTypes.function.buildNode('is', '*', '*');
          },
        peg$c1 = function() { return errorOnLuceneSyntax; },
        peg$c2 = function(head, tail) {
            const nodes = [head, ...tail.map(t => t[1])];
            const cursor = nodes.find(node => node.type === 'cursor');
            if (cursor) return cursor;
            if (nodes.length === 1) return head;
            return buildFunctionNode('or', nodes);
          },
        peg$c3 = function(head, tail) {
            const nodes = [head, ...tail.map(t => t[1])];
            const cursor = nodes.find(node => node.type === 'cursor');
            if (cursor) return cursor;
            if (nodes.length === 1) return head;
            return buildFunctionNode('and', nodes);
          },
        peg$c4 = function(query) {
            if (query.type === 'cursor') return query;
            return buildFunctionNode('not', [query]);
          },
        peg$c5 = "(",
        peg$c6 = peg$literalExpectation("(", false),
        peg$c7 = ")",
        peg$c8 = peg$literalExpectation(")", false),
        peg$c9 = function(query, trailing) {
            if (trailing.type === 'cursor') {
              return {
                ...trailing,
                suggestionTypes: ['conjunction']
              };
            }
            return query;
          },
        peg$c10 = ":",
        peg$c11 = peg$literalExpectation(":", false),
        peg$c12 = "{",
        peg$c13 = peg$literalExpectation("{", false),
        peg$c14 = "}",
        peg$c15 = peg$literalExpectation("}", false),
        peg$c16 = function(field, query, trailing) {
              if (query.type === 'cursor') {
                return {
                  ...query,
                  nestedPath: query.nestedPath ? `${field.value}.${query.nestedPath}` : field.value,
                }
              };

              if (trailing.type === 'cursor') {
                return {
                  ...trailing,
                  suggestionTypes: ['conjunction']
                };
              }
              return buildFunctionNode('nested', [field, query]);
            },
        peg$c17 = peg$otherExpectation("fieldName"),
        peg$c18 = function(field, operator, value) {
            if (value.type === 'cursor') {
              return {
                ...value,
                suggestionTypes: ['conjunction']
              };
            }
            const range = buildNamedArgNode(operator, value);
            return buildFunctionNode('range', [field, range]);
          },
        peg$c19 = function(field, partial) {
            if (partial.type === 'cursor') {
              return {
                ...partial,
                fieldName: field.value,
                suggestionTypes: ['value', 'conjunction']
              };
            }
            return partial(field);
          },
        peg$c20 = function(partial) {
            if (partial.type === 'cursor') {
              const fieldName = `${partial.prefix}${partial.suffix}`.trim();
              return {
                ...partial,
                fieldName,
                suggestionTypes: ['field', 'operator', 'conjunction']
              };
            }
            const field = buildLiteralNode(null);
            return partial(field);
          },
        peg$c21 = function(partial, trailing) {
            if (trailing.type === 'cursor') {
              return {
                ...trailing,
                suggestionTypes: ['conjunction']
              };
            }
            return partial;
          },
        peg$c22 = function(head, tail) {
            const partials = [head, ...tail.map(t => t[1])];
            const cursor = partials.find(node => node.type === 'cursor');
            if (cursor) {
              return {
                ...cursor,
                suggestionTypes: ['value']
              };
            }
            if (partials.length === 1) return head;
            return (field) => buildFunctionNode('or', partials.map(p => p(field)));
          },
        peg$c23 = function(head, tail) {
            const partials = [head, ...tail.map(t => t[1])];
            const cursor = partials.find(node => node.type === 'cursor');
            if (cursor) {
              return {
                ...cursor,
                suggestionTypes: ['value']
              };
            }
            if (partials.length === 1) return head;
            return (field) => buildFunctionNode('and', partials.map(p => p(field)));
          },
        peg$c24 = function(partial) {
            if (partial.type === 'cursor') {
              return {
                ...list,
                suggestionTypes: ['value']
              };
            }
            return (field) => buildFunctionNode('not', [partial(field)]);
          },
        peg$c25 = peg$otherExpectation("value"),
        peg$c26 = function(value) {
            if (value.type === 'cursor') return value;
            const isPhrase = buildLiteralNode(true);
            return (field) => buildFunctionNode('is', [field, value, isPhrase]);
          },
        peg$c27 = function(value) {
            if (value.type === 'cursor') return value;

            if (!allowLeadingWildcards && value.type === 'wildcard' && nodeTypes.wildcard.hasLeadingWildcard(value)) {
              error('Leading wildcards are disabled. See query:allowLeadingWildcards in Advanced Settings.');
            }

            const isPhrase = buildLiteralNode(false);
            return (field) => buildFunctionNode('is', [field, value, isPhrase]);
          },
        peg$c28 = peg$otherExpectation("OR"),
        peg$c29 = "or",
        peg$c30 = peg$literalExpectation("or", true),
        peg$c31 = peg$otherExpectation("AND"),
        peg$c32 = "and",
        peg$c33 = peg$literalExpectation("and", true),
        peg$c34 = peg$otherExpectation("NOT"),
        peg$c35 = "not",
        peg$c36 = peg$literalExpectation("not", true),
        peg$c37 = peg$otherExpectation("literal"),
        peg$c38 = "\"",
        peg$c39 = peg$literalExpectation("\"", false),
        peg$c40 = function(prefix, cursor, suffix) {
            const { start, end } = location();
            return {
              type: 'cursor',
              start: start.offset,
              end: end.offset - cursor.length,
              prefix: prefix.join(''),
              suffix: suffix.join(''),
              text: text().replace(cursor, '')
            };
          },
        peg$c41 = function(chars) {
            return buildLiteralNode(chars.join(''));
          },
        peg$c42 = "\\",
        peg$c43 = peg$literalExpectation("\\", false),
        peg$c44 = /^[\\"]/,
        peg$c45 = peg$classExpectation(["\\", "\""], false, false),
        peg$c46 = function(char) { return char; },
        peg$c47 = /^[^"]/,
        peg$c48 = peg$classExpectation(["\""], true, false),
        peg$c49 = function(chars) {
            const sequence = chars.join('').trim();
            if (sequence === 'null') return buildLiteralNode(null);
            if (sequence === 'true') return buildLiteralNode(true);
            if (sequence === 'false') return buildLiteralNode(false);
            if (chars.includes(wildcardSymbol)) return buildWildcardNode(sequence);
            const isNumberPattern = /^(-?[1-9]+\d*([.]\d+)?)$|^(-?0[.]\d*[1-9]+)$|^0$|^0.0$|^[.]\d{1,}$/;
            return buildLiteralNode(
              isNumberPattern.test(sequence)
                ? isFinite(sequence) && (sequence > Number.MAX_SAFE_INTEGER || sequence < Number.MIN_SAFE_INTEGER)
                  ? BigInt(sequence)
                  : Number(sequence)
                : sequence
            );
          },
        peg$c50 = peg$anyExpectation(),
        peg$c51 = "*",
        peg$c52 = peg$literalExpectation("*", false),
        peg$c53 = function() { return wildcardSymbol; },
        peg$c54 = "\\t",
        peg$c55 = peg$literalExpectation("\\t", false),
        peg$c56 = function() { return '\t'; },
        peg$c57 = "\\r",
        peg$c58 = peg$literalExpectation("\\r", false),
        peg$c59 = function() { return '\r'; },
        peg$c60 = "\\n",
        peg$c61 = peg$literalExpectation("\\n", false),
        peg$c62 = function() { return '\n'; },
        peg$c63 = function(keyword) { return keyword; },
        peg$c64 = /^[\\():<>"*{}]/,
        peg$c65 = peg$classExpectation(["\\", "(", ")", ":", "<", ">", "\"", "*", "{", "}"], false, false),
        peg$c66 = "<=",
        peg$c67 = peg$literalExpectation("<=", false),
        peg$c68 = function() { return 'lte'; },
        peg$c69 = ">=",
        peg$c70 = peg$literalExpectation(">=", false),
        peg$c71 = function() { return 'gte'; },
        peg$c72 = "<",
        peg$c73 = peg$literalExpectation("<", false),
        peg$c74 = function() { return 'lt'; },
        peg$c75 = ">",
        peg$c76 = peg$literalExpectation(">", false),
        peg$c77 = function() { return 'gt'; },
        peg$c78 = peg$otherExpectation("whitespace"),
        peg$c79 = /^[ \t\r\n]/,
        peg$c80 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
        peg$c81 = function() { return parseCursor; },
        peg$c82 = "@kuery-cursor@",
        peg$c83 = peg$literalExpectation("@kuery-cursor@", false),
        peg$c84 = function() { return cursorSymbol; },
        peg$c85 = "||",
        peg$c86 = peg$literalExpectation("||", false),
        peg$c87 = function() {
            error('LuceneOr');
          },
        peg$c88 = "&&",
        peg$c89 = peg$literalExpectation("&&", false),
        peg$c90 = function() {
            error('LuceneAnd');
          },
        peg$c91 = "+",
        peg$c92 = peg$literalExpectation("+", false),
        peg$c93 = "-",
        peg$c94 = peg$literalExpectation("-", false),
        peg$c95 = function() {
            error('LuceneNot');
          },
        peg$c96 = "!",
        peg$c97 = peg$literalExpectation("!", false),
        peg$c98 = "_exists_",
        peg$c99 = peg$literalExpectation("_exists_", false),
        peg$c100 = function() {
            error('LuceneExists');
          },
        peg$c101 = function() {
            error('LuceneRange');
          },
        peg$c102 = "?",
        peg$c103 = peg$literalExpectation("?", false),
        peg$c104 = function() {
            error('LuceneWildcard');
          },
        peg$c105 = "/",
        peg$c106 = peg$literalExpectation("/", false),
        peg$c107 = /^[^\/]/,
        peg$c108 = peg$classExpectation(["/"], true, false),
        peg$c109 = function() {
            error('LuceneRegex');
          },
        peg$c110 = "~",
        peg$c111 = peg$literalExpectation("~", false),
        peg$c112 = /^[0-9]/,
        peg$c113 = peg$classExpectation([["0", "9"]], false, false),
        peg$c114 = function() {
            error('LuceneFuzzy');
          },
        peg$c115 = function() {
            error('LuceneProximity');
          },
        peg$c116 = "^",
        peg$c117 = peg$literalExpectation("^", false),
        peg$c118 = function() {
            error('LuceneBoost');
          },
        peg$c119 = function() { return char; },
        peg$c120 = "=",
        peg$c121 = peg$literalExpectation("=", false),
        peg$c122 = "[",
        peg$c123 = peg$literalExpectation("[", false),
        peg$c124 = "]",
        peg$c125 = peg$literalExpectation("]", false),
        peg$c126 = "TO",
        peg$c127 = peg$literalExpectation("TO", false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseSpace();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseSpace();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseOrQuery();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseOptionalSpace();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseOrQuery() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      peg$savedPos = peg$currPos;
      s1 = peg$c1();
      if (s1) {
        s1 = void 0;
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseLuceneQuery();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseAndQuery();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$currPos;
          s4 = peg$parseOr();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseAndQuery();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$currPos;
            s4 = peg$parseOr();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseAndQuery();
              if (s5 !== peg$FAILED) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          }
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseAndQuery() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseNotQuery();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseAnd();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseNotQuery();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseAnd();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseNotQuery();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseNotQuery() {
      var s0, s1, s2;
